--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
+    "lint": "eslint 'src/**/*.+(js|ts|jsx|tsx)' ",
     "eject": "react-scripts eject",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "prepare": "husky install",
+    "commit": "cz"
   },
   "eslintConfig": {
     "extends": [
@@ -44,19 +47,29 @@
     ]
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.6.3",
+    "@commitlint/config-conventional": "^17.6.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "commitizen": "^4.3.0",
     "craco-less": "^2.1.0-alpha.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
+    "husky": "^8.0.0",
     "normalize.css": "^8.0.1",
     "prettier": "^2.8.8",
     "react-redux": "^8.0.5",
     "styled-components": "^5.3.11"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
